// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MediaGallerySection component renders correctly 1`] = `
<div>
  <div
    class="MediaGallerySection Section Section--alabaster"
  >
    <div
      class="Container"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <div
          class="MuiGrid-root Grid MuiGrid-container MuiGrid-spacing-xs-3"
        >
          <div
            class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-8"
          >
            <h2
              class="MuiTypography-root Typography Typography--underline MuiTypography-h2"
            >
              Lorem ipsum
            </h2>
          </div>
          <div
            class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12"
          >
            <div
              class="MediaGallery"
            >
              <div
                class="image-wrapper"
              >
                <div
                  class="main-image-wrapper main-image-wrapper--cover main-image-wrapper--default Media"
                >
                  <div
                    class="YoutubeVideo"
                  >
                    <button
                      aria-label="Lorem ipsum video label"
                      class="thumbnail"
                      type="button"
                    >
                      <div
                        class="gatsby-image-wrapper gatsby-image-wrapper-constrained preview-image"
                        data-gatsby-image-wrapper=""
                        style="overflow: hidden; display: inline-block; vertical-align: top;"
                      >
                        <div
                          style="max-width: 948px; display: block;"
                        >
                          <img
                            alt=""
                            aria-hidden="true"
                            role="presentation"
                            src="data:image/svg+xml;charset=utf-8,%3Csvg height='720' width='948' xmlns='http://www.w3.org/2000/svg' version='1.1'%3E%3C/svg%3E"
                            style="max-width: 100%; display: block; position: static;"
                          />
                        </div>
                        <div
                          aria-hidden="true"
                          data-placeholder-image=""
                          style="height: 100%; left: 0px; position: absolute; top: 0px; width: 100%;"
                        />
                        <picture>
                          <source
                            data-srcset="//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=237&h=180&q=50&fm=webp 237w,//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=474&h=360&q=50&fm=webp 474w,//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=948&h=720&q=50&fm=webp 948w"
                            sizes="(min-width: 948px) 948px, 100vw"
                            type="image/webp"
                          />
                          <img
                            alt="Lorem ipsum video image alt text"
                            data-gatsby-image-ssr=""
                            data-main-image=""
                            data-src="//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=948&h=720&q=50&fm=png"
                            data-srcset="//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=237&h=180&q=50&fm=png 237w,//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=474&h=360&q=50&fm=png 474w,//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=948&h=720&q=50&fm=png 948w"
                            decoding="async"
                            draggable="false"
                            loading="lazy"
                            sizes="(min-width: 948px) 948px, 100vw"
                            style="height: 100%; left: 0px; position: absolute; top: 0px; transform: translateZ(0); transition: opacity 250ms linear; width: 100%; will-change: opacity; object-fit: cover; object-position: center; opacity: 0;"
                          />
                        </picture>
                        <noscript />
                        <script
                          type="module"
                        >
                          const t="undefined"!=typeof HTMLImageElement&&"loading"in HTMLImageElement.prototype;if(t){const t=document.querySelectorAll("img[data-main-image]");for(let e of t){e.dataset.src&&(e.setAttribute("src",e.dataset.src),e.removeAttribute("data-src")),e.dataset.srcset&&(e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset"));const t=e.parentNode.querySelectorAll("source[data-srcset]");for(let e of t)e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset");e.complete&&(e.style.opacity=1)}}
                        </script>
                      </div>
                      <span
                        class="AlternativeContent"
                      >
                        Lorem ipsum video label
                      </span>
                      <div
                        aria-disabled="false"
                        class="MuiButtonBase-root MuiIconButton-root iconButtonStyles-root-12 iconButtonStyles-medium-18 iconButtonStyles-contained-13 play-button"
                        role="button"
                        tabindex="0"
                      >
                        <span
                          class="MuiIconButton-label"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M8 5v14l11-7z"
                            />
                          </svg>
                        </span>
                        <span
                          class="MuiTouchRipple-root"
                        />
                      </div>
                    </button>
                  </div>
                </div>
                <div
                  class="caption"
                >
                  <p
                    class="MuiTypography-root caption-text Typography MuiTypography-h6"
                  >
                    <span
                      class="LinesEllipsis  Truncate"
                    >
                      Lorem ipsum video subtitle
                      <wbr />
                    </span>
                  </p>
                </div>
              </div>
              <div
                class="thumbnails"
              >
                <button
                  class="MuiButtonBase-root thumb-scroller thumb-scroller--left ThumbScrollerButton ThumbScrollerButton--left"
                  tabindex="-1"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root icon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
                    />
                  </svg>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
                <button
                  class="MuiButtonBase-root thumb-scroller thumb-scroller--right thumb-scroller--hidden ThumbScrollerButton ThumbScrollerButton--right"
                  tabindex="-1"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root icon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                    />
                  </svg>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
                <div
                  class="scroller"
                  style="margin-right: 0%;"
                >
                  <button
                    class="MuiButtonBase-root thumbnail Thumbnail Thumbnail--large"
                    data-gtm="{\\"id\\":\\"media-gallery1\\",\\"label\\":\\"Lorem ipsum image alt text\\",\\"action\\":\\"//image.asset.jpg\\"}"
                    style="background-image: url(//image.asset.jpg);"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="accessibility-text"
                    >
                      Lorem ipsum image alt text
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </button>
                  <button
                    class="MuiButtonBase-root thumbnail Thumbnail Thumbnail--selected Thumbnail--large"
                    data-gtm="{\\"id\\":\\"media-gallery1\\",\\"label\\":\\"Lorem ipsum video image alt text\\",\\"action\\":\\"//video-image.asset.jpg\\"}"
                    style="background-image: url(//video-image.asset.jpg);"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="accessibility-text"
                    >
                      Lorem ipsum video image alt text
                    </span>
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root play-icon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M8 5v14l11-7z"
                      />
                    </svg>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`MediaGallerySection component renders correctly with long description 1`] = `
<div>
  <div
    class="MediaGallerySection Section Section--alabaster"
  >
    <div
      class="Container"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <div
          class="MuiGrid-root Grid MuiGrid-container MuiGrid-spacing-xs-3"
        >
          <div
            class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-8"
          >
            <h2
              class="MuiTypography-root Typography Typography--underline MuiTypography-h2"
            >
              Lorem ipsum
            </h2>
            <div
              class="description"
            >
              <div
                class="RichText"
              >
                <h2
                  class="MuiTypography-root title Typography MuiTypography-h2"
                >
                  Heading 2
                </h2>
                <p
                  class="MuiTypography-root Typography MuiTypography-body1 MuiTypography-gutterBottom"
                >
                  this is a test paragraph
                </p>
              </div>
            </div>
          </div>
          <div
            class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12"
          >
            <div
              class="MediaGallery"
            >
              <div
                class="image-wrapper"
              >
                <div
                  class="gatsby-image-wrapper gatsby-image-wrapper-constrained main-image-wrapper main-image-wrapper--cover main-image-wrapper--default Media"
                  data-gatsby-image-wrapper=""
                  style="overflow: hidden; display: inline-block; vertical-align: top;"
                >
                  <div
                    style="max-width: 948px; display: block;"
                  >
                    <img
                      alt=""
                      aria-hidden="true"
                      role="presentation"
                      src="data:image/svg+xml;charset=utf-8,%3Csvg height='720' width='948' xmlns='http://www.w3.org/2000/svg' version='1.1'%3E%3C/svg%3E"
                      style="max-width: 100%; display: block; position: static;"
                    />
                  </div>
                  <div
                    aria-hidden="true"
                    data-placeholder-image=""
                    style="height: 100%; left: 0px; position: absolute; top: 0px; width: 100%;"
                  />
                  <picture>
                    <source
                      data-srcset="//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=237&h=180&q=50&fm=webp 237w,//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=474&h=360&q=50&fm=webp 474w,//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=948&h=720&q=50&fm=webp 948w"
                      sizes="(min-width: 948px) 948px, 100vw"
                      type="image/webp"
                    />
                    <img
                      alt="Lorem ipsum"
                      data-gatsby-image-ssr=""
                      data-main-image=""
                      data-src="//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=948&h=720&q=50&fm=png"
                      data-srcset="//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=237&h=180&q=50&fm=png 237w,//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=474&h=360&q=50&fm=png 474w,//images.ctfassets.net/18fop5x17y3g/6GSQdvd6U3Gzt6Lh7eNaBR/4d364fe9edaf47c271cdcd6034a7ec28/demo-house.png?w=948&h=720&q=50&fm=png 948w"
                      decoding="async"
                      draggable="false"
                      loading="lazy"
                      sizes="(min-width: 948px) 948px, 100vw"
                      style="height: 100%; left: 0px; position: absolute; top: 0px; transform: translateZ(0); transition: opacity 250ms linear; width: 100%; will-change: opacity; object-fit: cover; object-position: center; opacity: 0;"
                    />
                  </picture>
                  <noscript />
                  <script
                    type="module"
                  >
                    const t="undefined"!=typeof HTMLImageElement&&"loading"in HTMLImageElement.prototype;if(t){const t=document.querySelectorAll("img[data-main-image]");for(let e of t){e.dataset.src&&(e.setAttribute("src",e.dataset.src),e.removeAttribute("data-src")),e.dataset.srcset&&(e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset"));const t=e.parentNode.querySelectorAll("source[data-srcset]");for(let e of t)e.setAttribute("srcset",e.dataset.srcset),e.removeAttribute("data-srcset");e.complete&&(e.style.opacity=1)}}
                  </script>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
